// Vitest Snapshot v1

exports[`Watermark > Watermark baseVue demo works fine 1`] = `
<t-watermark
  height="60"
  watermark-content="[object Object]"
  width="120"
  x="80"
  y="120"
>
  <div
    style="height: 300px;"
  />
</t-watermark>
`;

exports[`Watermark > Watermark graylevelVue demo works fine 1`] = `
<t-watermark
  alpha="0.3"
  height="22"
  watermark-content="[object Object]"
  width="158"
  x="100"
  y="140"
>
  <div
    style="height: 300px;"
  />
</t-watermark>
`;

exports[`Watermark > Watermark imageVue demo works fine 1`] = `
<t-watermark
  height="65.5"
  rotate="0"
  watermark-content="[object Object]"
  width="104"
  x="90"
  y="100"
>
  <div
    style="height: 300px;"
  />
</t-watermark>
`;

exports[`Watermark > Watermark movingImageVue demo works fine 1`] = `
<t-watermark
  height="22"
  movable=""
  watermark-content="[object Object]"
  width="158"
  x="90"
  y="100"
>
  <div
    style="height: 300px;"
  />
</t-watermark>
`;

exports[`Watermark > Watermark movingTextVue demo works fine 1`] = `
<t-watermark
  height="60"
  movable=""
  watermark-content="[object Object]"
  width="120"
  x="210"
  y="200"
>
  <div
    style="height: 300px;"
  />
</t-watermark>
`;

exports[`Watermark > Watermark multilineVue demo works fine 1`] = `
<t-watermark
  alpha="0.3"
  height="22"
  line-space="24"
  watermark-content="[object Object],[object Object]"
  width="158"
  x="100"
  y="120"
>
  <div
    style="height: 300px;"
  />
</t-watermark>
`;
